--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+@font-face {
+    font-family: oxo;
+    src: url(../public/Exo-Italic-VariableFont_wght.ttf);
+}
+.oxo{font-family: oxo;}
