--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,40 @@
 }
 .oxo{font-family: oxo;}
 
+
+/* ::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+} */
+
+
+
+.scroll::-webkit-scrollbar {
+    display: none;
+}
+
+.scroll {
+  -ms-overflow-style: none;
+   scrollbar-width: none; 
+}
+
+/* .hide-scrollbar {
+  overflow-y: auto;
+  scrollbar-width: none; /
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; 
+} */
